タブコンプリート修正